Add declarative bare-metal cloud-init profiles
